# aws-misc

./: README.md  pyproject.toml
aws_misc/: __init__.py  aws_misc.py
